17.3.2001	Export beautification <garetxe@users.sourceforge.net>

	* src/ttxview.c: Changed export file GtkEntry to GnomeFileEntry,
	and now uses zconf to keep preferences. Made it a bit wider.
	* configure.in: Released 0.5.91 (bugfixes) today, bumped version
	to 0.6.0cvs.
	* libvbi/lang.h, exp-*: Added gettext support to export.

16.3.2001	TTX export <mschimek@users.sourceforge.net>

	* Export options interface now tveng controls style.
	* Rewrote export dialog. Not completely satisfied, but well.
	* Added email keywords (a), (at).
	* Added vbi_network XDS/CNI unique id.

16.3.2001	pam workarounds <garetxe@users.sourceforge.net>

	* configure.in: Added --disable-pam option, apparently some pam
	versions are broken, so they cannot exec zsfb properly.
	* src/mmx.c: Strangely enough, the TryAMD label fails to compile
	under gcc 2.95.3 (report by Olivier Perron), applied the patch he
	sent to work around this.

15.3.2001	more clean calls for Overlay <garetxe@users.sourceforge.net>

	* src/overlay.c: Added some extra clean() calls (unmapping,
	stopping), this should fix those ugly pixels left.
	* src/main.c: Added a set of fallbacks in case /dev/video0 doesn't
	open, should make devFS work too.
	* src/capture.c: Capture mode speedup with XVideo scaler (1% cpu
	usage, whew!).

14.3.2001	DPMS in Xext <garetxe@users.sourceforge.net>

	* configure.in: Applied patch by Dirk Meul to search for DPMS
	functions in DPMS in -lXext in case -Xdpms fails.

10.3.2001	osd rough edges <garetxe@users.sourceforge.net>

	* osd.c: No flicker even w/o XVideo, knows about showing/hiding
	the main window.
	* help/de: German translation of index.html, by Carsten Menke.
	* src/osd.c: Fixed "ttx subtitles no update" bug.

9.3.2001	Cleanup <mschimek@users.sourceforge.net>

	* Updated de.po

8.3.2001	Fullscreen <garetxe@users.sourceforge.net>

	* src/fullscreen: Added, holds the code for fullscreen mode. Added
	the hability to do OSD correctly in fullscreen without XVideo
	PutVideo.
