@@ -5,6 +5,7 @@
 	* configure.in: Released 0.5.91 (bugfixes) today, bumped version
 	to 0.6.0cvs.
 	* libvbi/lang.h, exp-*: Added gettext support to export.
+	* src/ttxview.c: Fixed ENIAC bug in txt mode.	
 
 16.3.2001	TTX export <mschimek@users.sourceforge.net>
 
